fix some layout issues and formatting

--- a/front/src/app.pcss
+++ b/front/src/app.pcss
@@ -16,7 +16,7 @@
 }
 
 .btn-neutral-special {
-	@apply btn-outline btn-neutral font-bold text-neutral hover:text-neutral-content;
+	@apply btn-outline btn-neutral bg-neutral-content font-bold text-neutral hover:text-neutral-content;
 }
 
 @layer base {
